# CMake-Serial

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialthread.cpp  serialthread.h
